<resources>
    <string name="app_name">Books corner</string>
    <string name="action_settings">Profile</string>
    <string name="item_list">My books</string>
    <string name="item_edit">Item Edit</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must have at least 5 characters</string>
    <string name="password">Password</string>
    <string name="action_favorites">favorites</string>
    <string name="action_search">search</string>
    <string name="item_details">Item Details</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="gene">Gene</string>
    <string name="action_chart">Chart</string>
    <string name="items_chart">Books gene chart</string>
    <string name="description_zoom_touch_close">Description zoom touch close</string>

    <string-array name="bookgene">
        <item>Memories</item>
        <item>Historical Fiction</item>
        <item>Mystery</item>
        <item>Young Adult Fiction</item>
        <item>Classical Literature</item>
        <item>Religion</item>
        <item>Fantasy</item>
        <item>Children fiction</item>
        <item>Psychology</item>
        <item>Thriller</item>
        <item>Poems</item>
        <item>Science</item>
    </string-array>
</resources>
