<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".book_corner.item.BookDetailsFragment">

    <ImageView
        android:id="@+id/thumb_button_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/description_zoom_touch_close"
        android:scaleType="centerCrop"
        android:src="@drawable/book" />

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_zoom_touch_close"
        android:visibility="invisible" />

    <TableLayout
        android:id="@+id/tableLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="150dp"
        android:clipToPadding="false"
        android:shrinkColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"
                android:text="@string/title" />

            <EditText
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"

                android:text="@string/author" />


            <EditText
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"

                android:text="@string/gene" />

            <EditText
                android:id="@+id/book_gene"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_edit" />


</FrameLayout>